fix: Modal z-index

--- a/src/styles/Root.css
+++ b/src/styles/Root.css
@@ -2,6 +2,7 @@
   width: 100vw;
   height: 100vh;
   position: fixed;
+  z-index: 999;
   display: none;
   justify-content: center;
   align-items: center;
